--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                   </div>
               </div>            
               <div class="nav-link">
-                  <a href="#contact">ติดต่อเรา</a>
+                  <a href="#section">ติดต่อเรา</a>
               </div>
           </nav>
           <button id="cta-btn" class="btn btn-outline" style="width: 10%;" aria-label="ปรึกษาฟรี">ปรึกษาฟรี</button>
@@ -134,7 +134,7 @@
           </div>
       </section>
 
-      <section class="section">
+      <section class="section" id="sectionForm">
           <div class="img-box" style="width: 50%;">
               <img src="img/InsightX-contactUs.jpg" alt="contact-us">
           </div>
